# faemiyah-demoscene_2018-09_512b-intro_grey_screen_with_no_music_ncurses

./: .gitignore  CMakeLists.txt  LICENCE  README  README.md  compile.sh  refresh.sh
rel/: grey_screen_with_no_music_freebsd-amd64  grey_screen_with_no_music_freebsd-ia32
src/: grey_screen_with_no_music.cpp
